force-app/main/default/objects/Case/fields/Case_Resolution_Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution_Status_Label__c</fullName>
    <formula>IF( ISPICKVAL(Status, &quot;Closed&quot;), &quot;Resolved&quot;, &quot;Pending Resolution&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Resolution Status Label</label>
    <type>Text</type>
</CustomField>