force-app/main/default/objects/Case/fields/Customer_SLA_Tier_Display__c.field-meta.xml
<CustomField>
    <fullName>Customer_SLA_Tier_Display__c</fullName>
    <formula>TEXT(Account.SLA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer SLA Tier Display</label>
    <type>Text</type>
</CustomField>