force-app/main/default/objects/Case/fields/High_Priority_Open_Case_Indicator__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Open_Case_Indicator__c</fullName>
    <formula>AND( ISPICKVAL(Priority, &quot;High&quot;), NOT(ISPICKVAL(Status, &quot;Closed&quot;)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Priority Open Case Indicator</label>
    <type>Checkbox</type>
</CustomField>