force-app/main/default/objects/Case/fields/SLA_Breached_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breached_Status__c</fullName>
    <formula>IF( Resolution_Time__c &gt; 48, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Breached Status</label>
    <type>Checkbox</type>
</CustomField>