force-app/main/default/objects/Case/validationRules/Account_Mandatory_On_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Mandatory_On_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(AccountId), NOT(ISPICKVAL(Origin, &quot;Web&quot;)) )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Case must be associated with an Account</errorMessage>
</ValidationRule>