force-app/main/default/objects/Case/validationRules/High_Priority_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>High_Priority_Description_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Priority, &quot;High&quot;), ISBLANK(Description) )</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Description is mandatory for High Priority cases</errorMessage>
</ValidationRule>