force-app/main/default/objects/Case/validationRules/Priority_is_Mandatory_Before_Case_Progre.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_is_Mandatory_Before_Case_Progre</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(TEXT(Priority)), NOT(ISPICKVAL(Status, &quot;New&quot;)) )</errorConditionFormula>
    <errorDisplayField>Priority</errorDisplayField>
    <errorMessage>Priority must be selected before progressing the case!</errorMessage>
</ValidationRule>