force-app/main/default/objects/Case/validationRules/Required_SLA_Violation_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_SLA_Violation_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Working&quot;),
    NOT(
        OR(
            ISPICKVAL(SLAViolation__c, &quot;Yes&quot;),
            ISPICKVAL(SLAViolation__c, &quot;No&quot;)
        )
    )
)</errorConditionFormula>
    <errorDisplayField>SLAViolation__c</errorDisplayField>
    <errorMessage>Please Fill Required Field!</errorMessage>
</ValidationRule>