force-app/main/default/objects/Case/validationRules/Resolution_Time_Required_On_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Time_Required_On_Close</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status, &quot;Closed&quot;), ISBLANK(Resolution_Time__c)
)</errorConditionFormula>
    <errorDisplayField>Resolution_Time__c</errorDisplayField>
    <errorMessage>Resolution Time must be entered before closing the case</errorMessage>
</ValidationRule>