force-app/main/default/objects/Case/listViews/Technical_Problem_Case.listView-meta.xml
<ListView>
    <fullName>Technical_Problem_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Mechanical Team</label>
    <queue>Mechanical_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>